--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -97,6 +97,7 @@
     <string name="show_current_location">Показать текущее местоположение</string>
     <string name="edit_layer">Отредактировать слой \'%s\'</string>
     <string name="attributes_title">Атрибуты</string>
+    <string name="coordinates">Координаты</string>
     <string name="compass_title">Компас</string>
     <string name="refresh">Обновить</string>
     <string name="points_for_edit">Точки (можно редактировать)</string>
