--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,7 +96,7 @@
     <string name="show_status_panel_summary">Show current status info at bottom panel</string>
     <string name="show_current_location">Show current location</string>
     <string name="edit_layer">Edit \'%s\' layer</string>
-    <string name="of">%1$d of %2$d</string>
+    <string name="features_count_attributes">%1$d of %2$d</string>
     <string name="coordinates">Coordinates</string>
     <string name="compass_title">Compass</string>
     <string name="refresh">Refresh</string>
