Add self intersection validation #70

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -109,6 +109,7 @@
     <string name="lines_for_edit">Lines (can be edited)</string>
     <string name="polygons_for_edit">Polygons (can be edited)</string>
     <string name="press_aback_again">Press back again to exit</string>
+    <string name="self_intersection">Self intersection detected</string>
     <string name="interface_title">Interface</string>
     <string name="theme">Theme</string>
     <string name="reset_settings">Reset to defaults</string>
