--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -109,7 +109,8 @@
     <string name="points_for_edit">Точки (можно редактировать)</string>
     <string name="lines_for_edit">Линии (можно редактировать)</string>
     <string name="polygons_for_edit">Полигоны (можно редактировать)</string>
-    <string name="press_aback_again">Нажите назад еще раз для выхода</string>
+    <string name="press_aback_again">Нажмите назад еще раз для выхода</string>
+    <string name="self_intersection">Обнаружено самопересечение</string>
     <string name="interface_title">Интерфейс</string>
     <string name="theme">Тема</string>
     <string name="reset_settings">Сбросить все настройки</string>
