--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -125,4 +125,5 @@
     <string name="same_field_name">Поле с таким именем уже существует</string>
     <string name="same_layer_name">Слой с таким именем уже существует</string>
     <string name="default_field_name">Описание</string>
+    <string name="pref_sync_notification">Уведомление синхронизации</string>
 </resources>
