--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -23,26 +23,26 @@
 <resources>
 
     <string name="app_name">NextGIS Mobile</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_settings">Settings</string>
-    <string name="action_add">New layer</string>
-    <string name="action_add_local">Open local</string>
-    <string name="action_add_remote">Add web</string>
-    <string name="action_add_ngw">Add from NGW</string>
-    <string name="general">General</string>
-    <string name="general_summary">General settings</string>
-    <string name="keep_screen_on">Keep map screen on</string>
-    <string name="keep_screen_on_summary">Do not turn off screen</string>
-    <string name="show_zoom_controls">Show zoom controls</string>
-    <string name="show_zoom_controls_summary">Show zoom in/zoom out control on the map</string>
-    <string name="show_compass">Show mini compass</string>
-    <string name="map">Map</string>
-    <string name="map_summary">Map settings</string>
+    <string name="navigation_drawer_open">Відкрити панель навігації</string>
+    <string name="navigation_drawer_close">Згорнути панель навігації</string>
+    <string name="action_settings">Налаштування</string>
+    <string name="action_add">Новий шар</string>
+    <string name="action_add_local">Додати локальний</string>
+    <string name="action_add_remote">Додати з веб</string>
+    <string name="action_add_ngw">Додати з NGW</string>
+    <string name="general">Загальні</string>
+    <string name="general_summary">Загальні налаштування</string>
+    <string name="keep_screen_on">Не вимикати екран</string>
+    <string name="keep_screen_on_summary">Тримати екран увімкненим</string>
+    <string name="show_zoom_controls">Показати кнопки масштабування/string>
+    <string name="show_zoom_controls_summary">Показати кнопки +/- на мапі для збільшення/зменшення</string>
+    <string name="show_compass">Показати міні компас</string>
+    <string name="map">Мапа</string>
+    <string name="map_summary">Налаштування мапи</string>
     <string name="ngw">NextGIS Web</string>
-    <string name="ngw_summary">NextGIS Web settings</string>
-    <string name="app_description">Mobile GIS application for visualize and gather spatial data in the field and send it back to server. NextGIS Mobile also writes tracks and sends position information to web server.</string>
-    <string name="credits_intro">Credits</string>
+    <string name="ngw_summary">Налаштування NextGIS Web</string>
+    <string name="app_description">Мобільний ГІС-застосунок для збору та показу просторових даних в польових умовах та надсилати їх на сервер. NextGIS Mobile також може вести запис треків та надсилати координати місцезнаходження на веб-сервер</string>
+    <string name="credits_intro">Ліцензування</string>
     <string name="credits">Some icons used in the application are from <a href="http://icons8.com/android-icons">Icons8.com</a> licensed under a <a href="http://creativecommons.org/licenses/by-nd/3.0/">CC BY-ND 3.0 license</a> and <a href="http://romannurik.github.io/AndroidAssetStudio/icons-launcher.html">romannurik.github.io</a> licensed under a <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0 license</a></string>
     <string name="copyright"><![CDATA[Copyright © <a href=\"http://nextgis.com\">NextGIS</a>, 2012–2015]]></string>
     <string name="contacts"><a href="http://nextgis.ru/en/contact/">Contact us</a></string>
@@ -120,6 +120,6 @@
     <string name="empty_name">Name can not be empty</string>
     <string name="same_field_name">There is already field with same name</string>
     <string name="same_layer_name">There is already layer with same name</string>
-    <string name="default_field_name">Description</string>
-    <string name="pref_sync_notification">Show sync notification</string>
+    <string name="default_field_name">Опис</string>
+    <string name="pref_sync_notification">Повідомлення про синхронізацію</string>
 </resources>
