update uk strings

--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -59,67 +59,67 @@
     <string name="warning_not_implemented">Ще не впроваджено</string>
     <string name="pref_location_accuracy">Точність визначення місцезнаходження</string>
     <string name="pref_location_accuracy_gps">GPS</string>
-    <string name="pref_location_accuracy_cell">Other networks</string>
-    <string name="location">Location</string>
-    <string name="location_summary">Location and geometry by walking settings</string>
-    <string name="tracks_summary">Tracks settings</string>
-    <string name="track_start">Start new track</string>
-    <string name="track_stop">Stop track</string>
-    <string name="tracks_reload">Restart current track to apply changes</string>
-    <string name="pref_min_time">Minimum update time</string>
-    <string name="pref_min_distance">Minimum update distance</string>
-    <string name="meters">m</string>
-    <string name="seconds">s</string>
-    <string name="coordinates_format">Coordinates format</string>
-    <string name="coordinates_fraction_digits">Decimal places</string>
-    <string name="select_coordinates_format">Select coordinates format</string>
-    <string name="coordinates_format_summary">Coordinate text format</string>
-    <string name="map_bg">Map background</string>
-    <string name="map_bg_light">Light</string>
-    <string name="map_bg_neutral">Neutral</string>
-    <string name="map_bg_dark">Dark</string>
-    <string name="map_path">Map path</string>
-    <string name="map_path_summary">The path to map data folder. Changing map folder may prevent data deletion on application uninstall process</string>
-    <string name="select_map_path">Select map folder path</string>
-    <string name="moving">Moving…</string>
-    <string name="warning_map_moving">Dangerous operation! Don\'t cancel it or kill the application during the data moving to new location! You data may be broken or lost!</string>
-    <string name="warning_folder_should_be_empty">The folder should be empty. Cancel operation.</string>
-    <string name="frequentest">, as frequent as possible</string>
-    <string name="compass_vibrate">Vibrate on bezel touch</string>
-    <string name="compass_true_north">Show true north</string>
-    <string name="compass_magnetic">Show magnetic</string>
-    <string name="compass_keep_screen">Keep compass screen on</string>
-    <string name="accurate_measures_count">Count of GPS measures</string>
-    <string name="action_delete">Delete</string>
-    <string name="action_attributes">Attributes</string>
-    <string name="show_status_panel">Show status info panel</string>
-    <string name="show_current_location">Show current location</string>
-    <string name="edit_layer">Edit \'%s\' layer</string>
+    <string name="pref_location_accuracy_cell">Інщі мережі</string>
+    <string name="location">Місцеположення</string>
+    <string name="location_summary">Налаштування місцезнаходження та введення геометрій обходом</string>
+    <string name="tracks_summary">Налаштування треків</string>
+    <string name="track_start">Почати запис нового треку</string>
+    <string name="track_stop">Завершити запис треку</string>
+    <string name="tracks_reload">Перезапустіть запис для застосування змін</string>
+    <string name="pref_min_time">Мінімальний час оновлення</string>
+    <string name="pref_min_distance">Мінімальна відстань оновлення</string>
+    <string name="meters">м</string>
+    <string name="seconds">с</string>
+    <string name="coordinates_format">Формат координат</string>
+    <string name="coordinates_fraction_digits">Розрядів після коми</string>
+    <string name="select_coordinates_format">Виберіть формат координат</string>
+    <string name="coordinates_format_summary">Виберіть формат тексту</string>
+    <string name="map_bg">Фон карти</string>
+    <string name="map_bg_light">Світлий</string>
+    <string name="map_bg_neutral">Нейтральний</string>
+    <string name="map_bg_dark">Темний</string>
+    <string name="map_path">Путь до карти</string>
+    <string name="map_path_summary">Путь до папки з картою. Зміна може привести до того, що папка не буде очищатися при видаленні програми</string>
+    <string name="select_map_path">Вкажіть путь до папки з картою</string>
+    <string name="moving">Переміщення…</string>
+    <string name="warning_map_moving">Небезпечна операція! Не скасовуйте операцію і не зупиняйте додаток в процесі переміщення даних в нове місце. Це може привести до втрати даних!</string>
+    <string name="warning_folder_should_be_empty">Папка повинна бути пустою. Дія відмінена.</string>
+    <string name="frequentest">, так часто, як можливо</string>
+    <string name="compass_vibrate">Вібрація при дотику</string>
+    <string name="compass_true_north">Показати істинний північ</string>
+    <string name="compass_magnetic">Показувати магнітний полюс</string>
+    <string name="compass_keep_screen">Залишати екран компасу ввімкненим</string>
+    <string name="accurate_measures_count">Кількість замірів GPS</string>
+    <string name="action_delete">Видалити</string>
+    <string name="action_attributes">Атрибути</string>
+    <string name="show_status_panel">Показати панель статусу</string>
+    <string name="show_current_location">Показати поточне місцезнаходження</string>
+    <string name="edit_layer">Змінити \'%s\' шар</string>
     <string name="features_count_attributes">%1$d of %2$d</string>
-    <string name="coordinates">Coordinates</string>
-    <string name="length">Length</string>
-    <string name="center">Center</string>
-    <string name="area">Area</string>
-    <string name="perimeter">Perimeter</string>
-    <string name="compass_title">Compass</string>
-    <string name="refresh">Refresh</string>
-    <string name="points_for_edit">Points (can be edited)</string>
-    <string name="lines_for_edit">Lines (can be edited)</string>
-    <string name="polygons_for_edit">Polygons (can be edited)</string>
-    <string name="press_aback_again">Press back again to exit</string>
-    <string name="self_intersection">Self intersection detected</string>
-    <string name="ring_outside">One of holes outside the outer ring</string>
-    <string name="rings_intersection">Holes intersection</string>
-    <string name="interface_title">Interface</string>
-    <string name="theme">Theme</string>
-    <string name="reset_settings">Reset to defaults</string>
-    <string name="reset_settings_title">Confirm?</string>
-    <string name="reset_settings_message">All layers will be deleted! Only initial layers will be restored.</string>
-    <string name="action_point_by_tap">Create new point</string>
-    <string name="new_field">New field</string>
-    <string name="empty_name">Name can not be empty</string>
-    <string name="same_field_name">There is already field with same name</string>
-    <string name="same_layer_name">There is already layer with same name</string>
+    <string name="coordinates">Координати</string>
+    <string name="length">Довжина</string>
+    <string name="center">Центр</string>
+    <string name="area">Площа</string>
+    <string name="perimeter">Периметр</string>
+    <string name="compass_title">Компасс</string>
+    <string name="refresh">Оновити</string>
+    <string name="points_for_edit">Точки (можна редагувати)</string>
+    <string name="lines_for_edit">Лінії (можна редагувати)</string>
+    <string name="polygons_for_edit">Полігони (можна редагувати)</string>
+    <string name="press_aback_again">Натисніть назад ще раз для виходу</string>
+    <string name="self_intersection">Виявлено самоперетин</string>
+    <string name="ring_outside">Одна з дірок за межами полігону</string>
+    <string name="rings_intersection">Пересічення дірок</string>
+    <string name="interface_title">Інтерфейс</string>
+    <string name="theme">Тема</string>
+    <string name="reset_settings">Очистити всі налаштування</string>
+    <string name="reset_settings_title">Підтвердити?</string>
+    <string name="reset_settings_message">Усі шари будуть видалені! Будуть відновлені початкові шари.</string>
+    <string name="action_point_by_tap">Додати нову точку</string>
+    <string name="new_field">Нове поле</string>
+    <string name="empty_name">Ім'я не може бути порожнім</string>
+    <string name="same_field_name">Поле з таким ім'ям вже існує</string>
+    <string name="same_layer_name">Шар з таким ім'ям вже існує</string>
     <string name="default_field_name">Опис</string>
     <string name="pref_sync_notification">Повідомлення про синхронізацію</string>
 </resources>
