--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -38,6 +38,7 @@
     <string name="keep_screen_on">Не отключать экран</string>
     <string name="keep_screen_on_summary">Держать экран включенным</string>
     <string name="show_scale_ruler">Шкала масштаба</string>
+    <string name="show_ruler_measuring">Линейка измерений</string>
     <string name="show_zoom_controls">Включить управление масштабами</string>
     <string name="show_zoom_controls_summary">Показывать кнопки +/- на карте для увеличения/уменьшения</string>
     <string name="show_compass">Показывать мини компас</string>
