--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="keep_screen_on">Keep map screen on</string>
     <string name="keep_screen_on_summary">Do not turn off screen</string>
     <string name="show_scale_ruler">Show scale ruler</string>
+    <string name="show_ruler_measuring">Show measuring button</string>
     <string name="show_zoom_controls">Show zoom controls</string>
     <string name="show_zoom_controls_summary">Show zoom in/zoom out control on the map</string>
     <string name="show_compass">Show mini compass</string>
